Correction cynthia chap trefle + ajout des fichiers data/cout_* (pour tableaux d'optimisations) dans le projet

--- a/manuscrit_G_LEFEBVRE/annexe_penalisation.tex
+++ b/manuscrit_G_LEFEBVRE/annexe_penalisation.tex
@@ -2,12 +2,12 @@
 \pagestyle{main}
 
 \begin{document}
-\chapter{Exploration de différentes pénalisations sur la fonction coût utilsée pour optimiser les niveaux de gris. \label{chap:anx_penalisation} }
+\chapter{Exploration de différentes pénalisations sur la fonction coût utilsée pour optimiser les niveaux de gris \label{chap:anx_penalisation} }
 \chaptermark{Exploration de différentes pénalisations} %%% Titre court pour l'entete
 %\mylettrine{B}{labla}
 
 \section{Régularisation de Moreau-Yosida}
-\subsection{Présentation de la régularisation et propriétés.}
+\subsection{Présentation de la régularisation et propriétés}
 \begin{dfn}\label{dfn:moreau_yosida}
 Soit $J : \reel^n \longrightarrow \reel$ une fonction. La transformée (ou régularisée) de Moreau-Yosida de $J$ est définie à l'aide d'un paramètre $c>0$ par
 \begin{equation}
