--- a/manuscrit_G_LEFEBVRE/biblio.bib
+++ b/manuscrit_G_LEFEBVRE/biblio.bib
@@ -1,4 +1,4 @@
-
+-- Les commentaires ne sont pas entre %% --
 
 @article{Holmes2007,
 title = "Vascular endothelial growth factor receptor-2: Structure, function, intracellular signalling and therapeutic inhibition ",
@@ -440,4 +440,11 @@ year={2014}
     year = {2014},
     month = Mar,
     pdf = {http://hal.inria.fr/hal-00962163/PDF/RR-8502.pdf},
+}
+
+@online{webangiogenese,
+author = {Glioblastome Association Michèle Esnault (GFME)},
+note ={\url{http://gfme.free.fr/connaissances/angiogenese.html}},
+title = {L'angiogenèse des tumeurs cérébrales malignes},
+urldate = {20/07/2015}
 }
