--- a/manuscrit_G_LEFEBVRE/chap_analyse_heterogeneite.tex
+++ b/manuscrit_G_LEFEBVRE/chap_analyse_heterogeneite.tex
@@ -10,7 +10,7 @@
 %\todo[noline]{On peut employer le mot "fit" ?}
 
 
-\chapter{Critère quantifiant l'\hetero. \label{chap:crit_hetero}}
+\chapter{Critère quantifiant l'\hetero \label{chap:crit_hetero}}
 \mylettrine{D}{ans} ce chapitre, nous allons construire un critère permettant de quantifier l'\hetero d'une tumeur.
 A chaque image, on construira l'histogramme des niveaux de gris associés aux tumeurs. 
 Dans un premier temps, ce traitement sera effectués sur les images cliniques. % seront considérées. 
@@ -470,7 +470,7 @@ Ce ratio est donc corrélé à l'\hetero, mais pas de manière linéaire puisqu'
 Avant de proposer divers autres critères, étudions de manière plus précise, la façon dont peuvent s'intersecter deux gaussiennes.
 %Avant de regarder quel critère qu'il soit, étudions l'ensemble des configurations possibles entre 2 gaussiennes.
 
-\subsection{Ensemble des configurations d'un mélange bi-gaussien. \label{sec:config_gmm}}
+\subsection{Ensemble des configurations d'un mélange bi-gaussien \label{sec:config_gmm}}
 \begin{figure}[ht]
 \centering
 \subfloat[Cas avec 2 intersections, l'une se situant entre les centres des gaussiennes.]{
