--- a/manuscrit_G_LEFEBVRE/chap_modeleEDP.tex
+++ b/manuscrit_G_LEFEBVRE/chap_modeleEDP.tex
@@ -2,7 +2,7 @@
 \pagestyle{main}
 
 \begin{document}
-\chapter{Un modèle mathématique qui reproduit la croissance tumorale}
+\chapter{Un modèle mathématique qui reproduit la croissance tumorale \label{chap:modele_EDP}}
 
 %\mylettrine{N}{ous} allons ici présenter le cheminement qui, depuis les mécanismes biologiques et cliniques, a conduit à un modèle mathématique. 
 
