--- a/manuscrit_G_LEFEBVRE/publi_GIST-fr.tex
+++ b/manuscrit_G_LEFEBVRE/publi_GIST-fr.tex
@@ -229,7 +229,7 @@ Cependant plusieurs limites, en terme de diagnostic et en terme de résultats, r
 Tout d'abord, une importante variabilité existe dans les caractéristiques moléculaires et génétiques qui gouvernent le pathogène de ces tumeurs.
 Hirota \etal\ ont démontré la présence d'altérations moléculaires du gène KIT dans ces tumeurs (\cf \cite{Hirota1998}). 
 En plus de ces mutations de la tumeur primaire, de secondes mutations ont été identifiées chez les patients atteints de GIST avancé prétraité avec un inhibiteur de tyrosine kinase. A l'heure actuelle, 10 ensembles moléculaires différents de GIST avec différentes altérations moléculaires ont été identifiés. 
-Chez les patients avec une mutation du gène KIT, une résistance à l'imatininb est fréquemment observée, comme réporté dans~\cite{Blay2011}. 
+Chez les patients avec une mutation du gène KIT, une résistance à l'imatininb est fréquemment observée, comme reporté dans~\cite{Blay2011}. 
 Chez les autres patients, l'imatinib contrôle les lésions métastatiques pendant une période plus ou moins longue, autour de 
 20-24 mois dans 85\% des cas. 
 Les praticiens doivent ensuite changer pour autre molécule, ou bien utiliser une thérapie alternative. Comme le pronostic et la sensibilité aux thérapies ciblées dépend de chaque patient, notre but est de développer un modèle mathématique basé sur les images médicales des métastases au foie qui soit dépendant de chaque patient.
