--- a/manuscrit_G_LEFEBVRE/remerciements.tex
+++ b/manuscrit_G_LEFEBVRE/remerciements.tex
@@ -4,11 +4,11 @@ En premier lieu, je remercie Thierry Colin, professeur à l'université de Borde
 
 Je remercie aussi Olivier Saut, chargé de recherche CNRS, qui m'a épaulé au cours de ces 3 années. Il m'a particulièrement aidé sur l'aspect numérique, logicielle et informatique de ma thèse. Je lui suis reconnaissant pour sa patience lors de la résolution des différents problèmes informatiques que j'ai pu rencontré. 
 
-Je remercie également Clair Poignard, chargé de recherche INRIA, pour ses lectures et relectures minutieuses et ses corrections effectuées sur l'ensemble de mes productions écrites~: publications et ce manuscrit en autre.
+Je remercie également Clair Poignard, chargé de recherche INRIA, pour ses lectures et relectures minutieuses et ses corrections effectuées sur l'ensemble de mes productions écrites~: publications et ce manuscrit entre autre.
 
 Je remercie François Cornelis, docteur du CHU de Bordeaux, pour sa collaboration. Merci à lui d'avoir pris le temps de répondre à l'ensemble de mes interrogations d'ordre cliniques et biologiques sur les mécanismes des cancers (et plus particulièrement du GIST et des métastases hépatiques), des traitements et de l'imagerie notamment. Les discussions avec François ont toujours été très enrichissantes pour moi. 
 
-Je remercie Hassan Fathallah-Shaykh, professeur de l'université de l'Alabama à Birmingham, pour le temps qu'il m'a consacré. En particulier, sa relecture de ma publication à particulièrement contribuée à l'amélioration de celle-ci.
+Je remercie Hassan Fathallah-Shaykh, professeur de l'université de l'Alabama à Birmingham, pour le temps qu'il m'a consacré. En particulier, sa relecture de ma publication a particulièrement contribué  à l'amélioration de celle-ci.
 
 Je remercie également Patricio Cumsille, chercheur de l'université du Biobío (Chili) et de l'université du Chili (Santiago, Chili), pour sa collaboration. Il a étudié avec moi, lors de sa visite d'un an en France, au sein de notre équipe de recherche, un modèle qui donne suite à celui présenté dans ce manuscrit. 
 
