--- a/manuscrit_G_LEFEBVRE/annexe_tableaux_graphiques_complementaires.tex
+++ b/manuscrit_G_LEFEBVRE/annexe_tableaux_graphiques_complementaires.tex
@@ -12,28 +12,28 @@ L'ensemble des données utilisées pour réaliser ces travaux sont présentées 
 
 %%%%%% scan NBER
 \begin{figure}
-\subfloat[16 sept. 2008 -- Jour 119]{\label{fig_hen_spatial_1}
+\subfloat[16 sept. 2008 -- Jour 119]{\label{fig:hen_full_spatial_1}
 \reshapeimg{1.0}{0px}{0px}%
 \tikzzoom{full_scan/scan_henbert/2008_09_16(2).jpg}{3}{1.5}{1.2}%
 }
-\subfloat[30 juin 2009 -- Jour 406]{\label{fig_hen_spatial_2}
+\subfloat[30 juin 2009 -- Jour 406]{\label{fig:hen_full_spatial_2}
 \reshapeimg{1.1}{0px}{-9px}%
 \tikzzoom{full_scan/scan_henbert/2009_06_30(2).jpg}{3}{1.6}{1.2}%
 }
-\subfloat[5 juill. 2010  -- Jour 776]{\label{fig_hen_spatial_3}
+\subfloat[5 juill. 2010  -- Jour 776]{\label{fig:hen_full_spatial_3}
 \reshapeimg{1.1}{0px}{28px}%
 \tikzzoom{full_scan/scan_henbert/2010_07_05(3).jpg}{3}{1.5}{1.0}%
 }
 \\
-\subfloat[25 oct. 2010 -- Jour 888]{\label{fig_hen_spatial_4}
+\subfloat[25 oct. 2010 -- Jour 888]{\label{fig:hen_full_spatial_4}
 \reshapeimg{1.28}{45px}{50px}%
 \includegraphics[trim = {\margg} {\margb} {\margd} {\margh}, clip, width=0.32\textwidth]{full_scan/scan_henbert/2010_10_25.jpg}%
 }
-\subfloat[7 jan. 2011 -- Jour 962]{\label{fig_hen_spatial_5}
+\subfloat[7 jan. 2011 -- Jour 962]{\label{fig:hen_full_spatial_5}
 \reshapeimg{1.11}{20px}{-66px}%
 \includegraphics[trim = {\margg} {\margb} {\margd} {\margh}, clip, width=0.32\textwidth]{full_scan/scan_henbert/2011_01_07(2).jpg}%
 }
-\subfloat[10 juin 2011 -- Jour 1116]{\label{fig_hen_spatial_6}
+\subfloat[10 juin 2011 -- Jour 1116]{\label{fig:hen_full_spatial_6}
 \reshapeimg{1.28}{50px}{-8px}%
 \includegraphics[trim = {\margg} {\margb} {\margd} {\margh}, clip, width=0.32\textwidth]{full_scan/scan_henbert/2011_06_10.jpg}%
 }
@@ -408,7 +408,7 @@ Ci-dessous est présenté l'ensemble des histogrammes numérique de \Nber, corre
 
 
 \FloatBarrier
-\section{Valeur des paramètres pour les simulations numériques de la Figure~\ref{fig:possibilites}~:}
+\section{Valeur des paramètres pour les simulations numériques de la Figure~\ref{fig:possibilites}}
 
 L'ensemble des paramètres utilisés pour réaliser la simulation numérique présentée Figure~\ref{fig:possibilites} de la section~\ref{section_possibilites} 
 est présenté dans la Table~\ref{table_param_possibilites}.
