Refonte du chapitre sur les criteres quantifiant l'heterogeneite

--- a/manuscrit_G_LEFEBVRE/annexe_gaussienne.tex
+++ b/manuscrit_G_LEFEBVRE/annexe_gaussienne.tex
@@ -1,4 +1,6 @@
 \documentclass[main.tex]{subfiles}
+\pagestyle{main}
+
 \begin{document}
 \chapter{Analyse de mélanges bi-gaussien \label{chap:anx_gmm}}
 \mylettrine{D}{ans} tout ce chapitre dédié à l'analyse d'un mélange bi-gaussien sous toutes les coutures, nous considèrerons les mêmes notations que celles utilisées dans le chapitre~\ref{chap:crit_hetero}.
