--- a/manuscrit_G_LEFEBVRE/main.tex
+++ b/manuscrit_G_LEFEBVRE/main.tex
@@ -436,7 +436,8 @@ Version du \today, \printtime
 \subfile{annexe_tableaux_graphiques_complementaires}
 \subfile{annexe_schema_mixte_EFVF}
 \subfile{annexe_penalisation}
-\subfile{annexe_gaussienne}
+%\subfile{annexe_gaussienne}
+%\subfile{annexe_structure_code}
 \end{appendices}
 
 \backmatter  %%%% l'épilogue du document
