--- a/manuscrit_G_LEFEBVRE/mes_macros.tex
+++ b/manuscrit_G_LEFEBVRE/mes_macros.tex
@@ -39,6 +39,13 @@
 
 \newcommand{\reel}{\mathbb{R}}
 
+%\newcommand{\HH}{~$\mathcal{H}$\xspace}
+%\newcommand{\HHmath}{\mathcal{H}\xspace}
+%\newcommand{\HH}{~$\mathscr{H}$\xspace}
+%\newcommand{\HHmath}{\mathscr{H}\xspace}
+\newcommand{\HH}{~\ensuremath{\mathscr{H}}\xspace}
+\newcommand{\HHobj}{~$\mathscr{H}_{obj}$\xspace}
+
 \newcommand{\treat}{\mathcal{T}}
 \newcommand{\TI}{{\mathcal T_1}}
 \newcommand{\TS}{{\mathcal T_2}}
