Annexe structuration du code

--- a/manuscrit_G_LEFEBVRE/main.tex
+++ b/manuscrit_G_LEFEBVRE/main.tex
@@ -437,7 +437,7 @@ Version du \today, \printtime
 \subfile{annexe_schema_mixte_EFVF}
 \subfile{annexe_penalisation}
 %\subfile{annexe_gaussienne}
-%\subfile{annexe_structure_code}
+\subfile{annexe_structure_code}
 \end{appendices}
 
 \backmatter  %%%% l'épilogue du document
