--- a/manuscrit_G_LEFEBVRE/remerciements.tex
+++ b/manuscrit_G_LEFEBVRE/remerciements.tex
@@ -6,7 +6,7 @@ Je remercie aussi Olivier Saut, chargé de recherche CNRS, qui m'a épaulé au c
 
 Je remercie également Clair Poignard, chargé de recherche INRIA, pour ses lectures et relectures minutieuses et ses corrections effectuées sur l'ensemble de mes productions écrites~: publications et ce manuscrit entre autre.
 
-Je remercie François Cornelis, docteur du CHU de Bordeaux, pour sa collaboration. Merci à lui d'avoir pris le temps de répondre à l'ensemble de mes interrogations d'ordre cliniques et biologiques sur les mécanismes des cancers (et plus particulièrement du GIST et des métastases hépatiques), des traitements et de l'imagerie notamment. Les discussions avec François ont toujours été très enrichissantes pour moi. 
+Je remercie François Cornelis, radiologue du CHU de Bordeaux, pour sa collaboration. Merci à lui d'avoir pris le temps de répondre à l'ensemble de mes interrogations d'ordre cliniques et biologiques sur les mécanismes des cancers (et plus particulièrement du GIST et des métastases hépatiques), des traitements et de l'imagerie notamment. Les discussions avec François ont toujours été très enrichissantes pour moi. 
 
 Je remercie Hassan Fathallah-Shaykh, professeur de l'université de l'Alabama à Birmingham, pour le temps qu'il m'a consacré. En particulier, sa relecture de ma publication a particulièrement contribué  à l'amélioration de celle-ci.
 
