--- a/manuscrit_G_LEFEBVRE/intro.tex
+++ b/manuscrit_G_LEFEBVRE/intro.tex
@@ -5,26 +5,76 @@
 \specialchap{Introduction}
 %\chapter{Introduction}
 
-Le but de ce travail est de fournir un modèle spatial de tumeur du stroma\footnote{tissu de soutien, non impliqué dans la fonction première de l'organe.} gastroinstestinal (GIST) traité cliniquement de manière standard afin de comparer le modèle avec les images, et éventuellement de souligner des particularités dans la croissance tumorale ou dans les rechutes. Ce travail est un premier pas dans la modélisation de résistance aux traitements, basée sur des images cliniques.
+\lettrine{L}{e} cancer est l'un des plus grand fléau du XXI\ieme %\up{ième} 
+siècle.  Dans les pays industrialisés, il est la deuxième cause de mortalité derrière les maladies cardio-vasculaires. 
+%% http://www.lexpress.fr/actualite/societe/sante/le-cancer-un-fleau-en-plein-essor_1552976.html
+En 2012, l'OMS\footnote{Organisation Mondiale de la Santé} attribuait à cette maladie approximativement 14 millions de nouveaux cas et 8,2 millions de décès. 
+%% World Cancer Report 2014, IARC
+%% http://onlinelibrary.wiley.com/doi/10.1002/ijc.29210/abstract?userIsAuthenticated=false&deniedAccessCustomisedMessage=
+%% http://www.who.int/mediacentre/factsheets/fs297/fr/
+%% http://onlinelibrary.wiley.com/doi/10.3322/caac.20107/full
+%% http://www.who.int/healthinfo/global_burden_disease/2004_report_update/en/
+
+\paragraph{}
+ Bien que de nombreuses recherches soient financées sur le sujet, beaucoup d'interrogations   règnent encore sur cette maladie. D'un autre côté, les mathématiques ont pris une place omniprésente dans la vie de tous les jours au travers de la modélisation~: aéronautique, aérospatial, automobile ... Elles sont capables de modéliser un très large spectre de problème physique, chimique, biologique, épidémiologique, etc. Pourquoi ne pas les utiliser pour modéliser la croissance tumorale ? pour prédire les rechutes aux traitements ? pour personnaliser les traitements à chaque patients ? 
+ 
+\paragraph{}
+Les travaux présentés ici s'inscrivent pleinement dans cette démarche. Ils constituent un premier pas dans la modélisation de résistance aux traitements, basée sur des images cliniques. 
+Plus particulièrement, il s'agit là de proposer un modèle mathématique décrivant la croissance de métastases (tumeurs filles) hépatiques en provenance de cancer du stroma\footnote{Tissu de soutien, non impliqué dans la fonction première de l'organe.} gastroinstestinal (GIST). Ce type de cancer touche de 9 à 14 cas par million de personnes par an~\cite{Nilsson2005}. Dans 25\% des cas, ce cancer migre vers le foie~\cite{Nilsson2005}. Ces métastases sont connues pour être relativement résistantes aux traitements anti-cancéreux, ce qui donne un intérêt certain à la modélisation de leurs comportements. 
 
 
-Dans un premier temps, nous fournissons ici un modèle, qui consiste en un système d'équations aux dérivées partielles (EDPs) non linéaires afin de prendre en compte les aspects spatiaux de la croissance tumorale. Actuellement, 
+\paragraph{}
+Le suivi clinique des patients sous traitement est assuré par des scanners réguliers, réalisés généralement tous les deux mois.  
+A l'heure actuelle, pour mesurer l'efficacité d'un traitement, le corps médical utilise le critère RECIST, qui consiste à ne retenir des images médicales que le diamètre de la plus large lésion. L'information retenue semble donc très faible au regard de toutes celles contenues dans les scanners. Plusieurs études ont déjà montrées ses limitations, en particulier lors de traitements anti-angiogénique REFFF. L'imagerie fait apparaître bien d'autres particularités, notamment l'\hetero tumorale à laquelle nous nous intéresserons tout au long de ce manuscrit. L'\hetero peut-elle être liée à l'émergence de populations cellulaires résistantes ? Peut-on reproduire ce caractère par la modélisation ? Comment la quantifier ?
+%La principale particularité à laquelle nous nous intéresserons sera l'\hetero tumorale. Quelles sont les informations sur le comportement de la tumeur que l'ont peut extraire de l'imagerie médicale ? Les critères actuels de lecture de l'imagerie médicale sont-ils suffisant ? L'\hetero peut-elle apportée une information supplémentaire ? 
+
+
+%%Son but est de fournir un modèle spatial de GIST pour les cas traités cliniquement de manière standard afin de comparer le modèle avec les images, et éventuellement de souligner des particularités dans la croissance tumorale ou dans les rechutes.
+
+\paragraph{}
+Les interrogations précédemment posées seront abordées dans ce manuscrit au travers de ses différents chapitres. 
+
+\paragraph{}
+Le premier chapitre est dédié à la présentation des aspects biologiques et cliniques du cancer.  Il présente non pas de manière exhaustive tous les mécanismes du cancer, mais ceux nécessaire à la compréhension des choix réalisés dans la modélisation. La croissance d'une tumeur sera d'abord présentée. Puis sera abordé, la manière dont les métastases se disséminent. Les différents types de traitements seront ensuite présentés. La seule et unique source d'informations cliniques que nous ayant étant des images scanners, nous nous devons de comprendre comment ce type d'image est acquises. Nous discuterons ensuite du critère RECIST et de ses limitations avant de terminer par les spécificité des métastases hépatiques de GISTs.
+
+
+\paragraph{}
+Dans le second chapitre, nous présentons le modèle, qui consiste en un système d'équations aux dérivées partielles (EDPs) non linéaires afin de prendre en compte les aspects spatiaux de la croissance tumorale. Actuellement, 
 les modèles basés sur des équations différentielles ordinaires (EDOs), comme les modèles de Mendelsohn, de Gompertz ou de 
 Bertalanffy, permettent de suivre la croissance de l'aire tumorale mais ils ne considèrent aucun aspect spatial de cette croissance. Nous en référons à l'analyse de Benzekry {\it et al.} pour plus de détails sur de tels modèles 1D~\cite{benzekry2014}. 
 Notre modèle est dans le même esprit que celui de Ribba~{\it et
-  al.}~\cite{Ribba2006532} -- nous vous renvoyons également à~\cite{Iollo2012,gallinato2014} -- pour  décrire l'évolution de la maladie. La principale nouveauté du modèle réside en la description des traitements. Deux traitements sont considérés~: le premier traitement a un effet cytotoxique alors que le second à un effet à la fois cytotoxique et antiangiogénique. Trois populations de cellules proliférantes sont utilisées pour décrire la résistance aux traitements~: une population de cellules sensibles aux deux traitements, un autre sensible uniquement au second traitement et une dernière résistante aux deux traitements.  
+  al.}~\cite{Ribba2006532} -- nous vous renvoyons également à~\cite{Iollo2012,gallinato2014} -- pour décrire l'évolution de la maladie. La principale nouveauté du modèle réside en la description des traitements. Deux traitements sont considérés~: le premier traitement a un effet cytotoxique alors que le second à un effet à la fois cytotoxique et antiangiogénique. Trois populations de cellules proliférantes sont utilisées pour décrire la résistance aux traitements~: une population de cellules sensibles aux deux traitements, un autre sensible uniquement au second traitement et une dernière résistante aux deux traitements.  
 Nous incorporons également un modèle simple d'angiogenèse puisqu'elle joue un rôle crucial dans la croissance métastatique.
 
 
-Une fois le modèle construit, nous présentons les schémas numériques utilisés pour résoudre les EDPs. 
-En particulier, nous présentons dans la 
-Section~\ref{sec:NumMet} un nouveau type de schéma WENO5 qui stabilise le calcul numérique en utilisant une combinaison du stencil classique du WENO5 avec un autre stencil tourné par rapport au premier. Ensuite, dans la Section~\ref{sec:NumRes}, nous comparons dans le détail notre modèle aux données cliniques pour un patient donné, pour lequel nous disposons de l'ensemble du protocole clinique. 
-Mentionnons qu'il a été nécessaire d'introduire une reconstitution numérique de scanner depuis les résultats numériques afin de comparer les niveaux de gris des scanners avec nos simulations. 
-Une fois le fit obtenu, nous examinons numériquement l'effet de la dose de traitement sur la progression de la croissance tumorale. Un résultat contre-intuitif est ainsi obtenu~: avec les paramètres utilisés pour le fit des données, une augmentation de la dose du premier traitement n'améliore pas le temps de survie sans aggravation. Ce résultat est expliqué dans la Section~\ref{subsec:NumEff}. 
-Enfin, nous concluons sur la consistance de notre modèle en présentant les différents comportements d'évolution tumorale que l'on peut obtenir. 
-Nous fitons également l'aire tumorale d'un autre patient dont la tumeur est proche du bord du foie. 
-Notez que pour un tel patient, la forme de la tumeur ne pourra pas être retrouvée. Notre modèle ne prend pas en compte les contraintes mécaniques correspondantes. Cependant, l'aire tumorale semble bien reproduite par nos simulations. 
-Les résultats de cet article sont un premier pas vers la compréhension des résistances des métastases hépatiques de GIST aux médicaments. Cependant, comme mentionné dans la conclusion, les scanners ne fournissent pas suffisamment d'informations pour permettre à notre modèle d'être prédictif~: évaluer les paramètres sur les scanners réalisés durant la croissance avant traitement et durant la première ligne de traitement ne suffit pas pour prédire la réponse à la seconde ligne de traitement. Ceci est dû au fait qu'en se basant sur les scanners, il est impossible d'évaluer la quantité de cellules insensibles au second traitement. Nous sommes convaincus que des données sur la structure de la tumeur, comme des biopsies ou des images fonctionnelles, devraient aider à améliorer la prédictivité du modèle.
+%Une fois le modèle construit, nous présentons les schémas numériques utilisés pour résoudre les EDPs. 
+%En particulier, nous présentons dans la 
+%Section~\ref{sec:NumMet} un nouveau type de schéma WENO5 qui stabilise le calcul numérique en utilisant une combinaison du stencil classique du WENO5 avec un autre stencil tourné par rapport au premier. 
 
+Dans la Section~\ref{sec:NumRes}, nous comparons dans le détail les résultats numériques fournis par notre modèle aux données cliniques pour un patient donné, pour lequel nous disposons de l'ensemble du protocole clinique. 
+%Mentionnons qu'il a été nécessaire d'introduire une reconstitution numérique de scanner depuis les résultats numériques afin de comparer les niveaux de gris des scanners avec nos simulations. 
+Une fois le fit obtenu, nous examinons numériquement l'effet de la dose de traitement sur la progression de la croissance tumorale. Un résultat contre-intuitif est ainsi obtenu~: avec les paramètres utilisés pour le fit des données, une augmentation de la dose du premier traitement n'améliore pas le temps de survie sans aggravation. Ce résultat est expliqué dans la Section~\ref{subsec:NumEff}. 
+Enfin, nous discuterons sur la consistance de notre modèle en présentant les différents comportements d'évolution tumorale que l'on peut obtenir. 
+Nous fitons également l'aire tumorale d'un autre patient dont la tumeur est proche du bord du foie. 
+Pour un tel patient, la forme de la tumeur ne pourra pas être retrouvée. Notre modèle ne prend pas en compte les contraintes mécaniques correspondantes. Cependant, l'aire tumorale semble bien reproduite par nos simulations. 
+Les résultats du premier chapitre sont un premier pas vers la compréhension des résistances des métastases hépatiques de GIST aux médicaments. Cependant, comme mentionné dans la conclusion, les scanners ne fournissent pas suffisamment d'informations pour permettre à notre modèle d'être prédictif~: évaluer les paramètres sur les scanners réalisés durant la croissance avant traitement et durant la première ligne de traitement ne suffit pas pour prédire la réponse à la seconde ligne de traitement. Ceci est dû au fait qu'en se basant sur les scanners, il est impossible d'évaluer la quantité de cellules insensibles au second traitement. Nous sommes convaincus que des données sur la structure de la tumeur, comme des biopsies ou des images fonctionnelles, devraient aider à améliorer la prédictivité du modèle.
+
+
+\paragraph{}
+Dans un troisième chapitre, les aspects numériques seront abordés. En particulier, il a fallut faire face à une instabilité numérique que l'on présentera et à laquelle l'équipe n'a jamais été confrontée avec les schémas classiques qu'elle utilisait. Nous étudions ici des croissances de tumeurs avec traitement, sur du long terme et avec de fort rétrécissement de la taille induit par les traitements. Ce sont là autant de raisons qui présentent l'originalité du problème. Nous montrerons que les champs de vitesses non communs obtenus lors de la simulation numérique  sont à l'origine des instabilités numériques. Enfin un nouveau schéma de transport sera proposé, le \twinweno, pour palier à cette instabilité.
+
+
+\paragraph{}
+Dans le chapitre 4, nous détaillerons comment construit-on des images scanners de synthèse à partir des résultats numériques. La simulation numérique fournit la répartition spatio-temporelle de différentes populations cellulaires. En aucun cas cela fournit les niveaux d'absorption des tissus au rayons X, comme mesurés par les scanners. Il nous faut donc un moyen de reconstituer des images scanners de synthèse à partir de ces densités de populations, dans le but de rapprocher au plus près (une optimisation a été faite) le format des résultats numériques à celui des données cliniques.
+Cette construction d'images scanners de synthèse permettra une meilleure comparaison des résultats obtenus avec les données cliniques. Elle est également d'un intérêt non négligeable pour le clinicien, qui peut ainsi regarder nos résultats numériques comme s'il s'agissait de scanners réels. 
+
+
+\paragraph{}
+Dans le cinquième et dernier chapitre, nous chercherons un critère permettant de quantifier l'\hetero. \todo[noline]{Etat de l'art sur la construction de quantificateur de l'\hetero} Ce critère devra être applicable aussi bien aux données cliniques qu'au résultats fournis par la simulation numériques. Et c'est ce qui fait ici l'originalité de la construction d'un tel critère. La méthode proposée ici est basée sur l'analyse des niveaux de gris qui constituent les images (cliniques et numériques). A partir de l'histogramme des niveaux de gris, deux dominantes sont identifiées sous forme gaussienne pour chacune des images. 
+A partir de ces deux composantes, un quantificateur de l'\hetero sera construit. L'idée repose sur le fait que plus les composantes sont éloignées, plus elles traduisent une \hetero. 
+Le critère sera construit en se basant sur les scanners de \Nber uniquement. Le second patient, \Chen, sera gardé à titre de vérification, pour valider le critère. Une fois le critère construit, il sera appliqué également aux images produites par la simulation numérique. La robustesse du critère vis à vis de la paramétrisation choisie pour la synthèse des images  numériques sera présentée. Ce critère montrera notamment les limites du modèle EDP en terme de reproduction de l'\hetero tumorale.
+
+\paragraph{}
+Enfin diverses annexes viendront compléter les discussions menées au cours de ce manuscrit. En particulier j'attire l'attention sur l'annexe~\ref{chap:anx_img_complement} qui présente notamment l'ensemble des données cliniques dont nous disposons pour les deux patients, données qui ont toutes été acquises sur la même machine. 
 
 \end{document}
